# Building-and-Evaluating-Advanced-RAG-Applications

./: .gitignore  README.md  config.py  generated_questions.text  pyproject.toml  utils.py  utils_trulens..py  utils_trulens.py
notebooks/: EDA.ipynb  L3-Sentence_window_retrieval.ipynb  L4-Auto-merging_Retrieval.ipynb  Parser_experiment.ipynb
streamlit/: app.py
