[tool.poetry]
name = "rag-llamaindex"
version = "0.1.0"
description = "An environment to build a RAG system with LlaMaIndex"
authors = ["Tai Le"]
readme = "README.md"
packages = [{ include = "rag_llamaindex" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.9.7"
llama-index = "^0.9.43"
openai = "^1.11.1"
pypdf = "^4.0.1"
ipykernel = "^6.29.0"
transformers = "^4.37.2"
# For Windows
torch = [
    { "url" = "https://download.pytorch.org/whl/cu121/torch-2.2.0%2Bcu121-cp39-cp39-win_amd64.whl#sha256=ea5b283a8f3ae2b7919ed5d83827664883476560f1161b3e17129827511d8568", markers = "sys_platform == 'win32'" },
    { "url" = "https://download.pytorch.org/whl/cpu/torch-2.2.0-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl#sha256=e6d2550a8beadf79ce48271aa2a281175e91a3065fed385d2a8b9802c2a744db", markers = "sys_platform == 'linux'" },
]
sentence-transformers = "^2.3.1"
matplotlib = "^3.8.2"
trulens = "^0.13.4"
trulens-eval = "^0.22.0"
pydantic-settings = "^2.1.0"
bertopic = "^0.16.0"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
